# cxxess

./: .clang-format  .gitignore  .gitmodules  meson.build
assets/: ATTRIBUTION
include/gameplay/: board.hpp  piece.hpp
include/gameplay/utils/: vector.hpp
include/graphics/: context.hpp  renderer.hpp
src/: main.cpp
src/gameplay/: board.cpp  meson.build  piece.cpp
src/gameplay/utils/: vector.cpp
src/graphics/: context.cpp  meson.build  renderer.cpp
src/graphics/test/: renderer_test.cpp
src/util/: incbin_generator.cpp  meson.build
